--- a/itemV2.cfg
+++ b/itemV2.cfg
@@ -1,9 +1,17 @@
 title = "Sneaky Bois";
-description = "[h1]Sneaky Bois[/h1]
-Requested by zewit in Fargoth's stream.
-Replaces all chaos warrior containing patrols with gutter runners and critters.
-Hardly tested but it works.
-Did this in like an hour so probs will update.";
+description = "[h1]Sneaky Bois (Working Name) (Updated 22/12)[/h1]
+
+Originally requested by zewit in Fargoth's stream.
+Replaces all patrols with gutter runners and gutter runner decoys.
+
+[h1]Gutter Runner Decoys:[/h1]
+Same as normal Gutter Runners but:
+- Has 1 HP
+- Can't attack you (including jumping) or vanish
+
+Hardly tested but it works. Any bugs pls make a discussion post or comment.
+
+Note: Didn't have time to properly make code good so could have compatibility issues with other mods";
 preview = "item_preview.jpg";
 content = "bundleV2";
 language = "english";
